--- a/Tarea 2.ipynb
+++ b/Tarea 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T01:06:39.810914Z",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T02:06:18.559161Z",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "4  unknown    5   may       198         1     -1         0  unknown  0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "4  unknown    5       198         1     -1         0  unknown  0         5  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "4       164         1     -1         0  unknown  0         5  1.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "4         1     -1         0  0         5  1.0       0.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "{'cellular', 'telephone', 'unknown'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T01:06:54.203599Z",
@@ -966,7 +966,7 @@
        "4               0                 0                  0                1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-14T01:09:15.466980Z",
+     "start_time": "2019-02-14T01:09:15.436263Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    bank_dummies.drop('y', axis=1).drop('prev_out',axis=1).drop('edu',axis=1), # X\n",
+    "    bank_dummies.y,  # y\n",
+    "    test_size=0.2, # porcentaje que será prueba\n",
+    "    random_state=42) # para fijar el aleatorio (reproducibilidad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-14T02:06:18.583126Z",
+     "start_time": "2019-02-14T02:06:18.565242Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grid_parametros = {\n",
+    "    'max_depth':[i for i in range (1,50)],\n",
+    "    'splitter': ['random'],\n",
+    "    'min_samples_split': [15, 20, 30],\n",
+    "}\n",
+    "\n",
+    "rf = DTR()\n",
+    "\n",
+    "rf_cv = GridSearchCV(\n",
+    "    rf, \n",
+    "    grid_parametros,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-14T02:07:09.731748Z",
+     "start_time": "2019-02-14T02:06:18.731036Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score='raise',\n",
+       "       estimator=DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           presort=False, random_state=None, splitter='best'),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49], 'splitter': ['random'], 'min_samples_split': [15, 20, 30]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_cv.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-14T02:07:09.738030Z",
+     "start_time": "2019-02-14T02:07:09.733825Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 12, 'min_samples_split': 30, 'splitter': 'random'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_cv.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.263627514700456"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_cv.best_score_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observar y Entender\n",
+    "\n",
+    "El código que sigue lo utilizamos para saber cómo estaban armandos los valores que ibamos a clasificar y poder entender mejor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1713,131 +1846,6 @@
     "        printmd('<br>')\n",
     "\n",
     "whatDoIHave(bank_dummies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-14T01:09:15.466980Z",
-     "start_time": "2019-02-14T01:09:15.436263Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    bank_dummies.drop('y', axis=1).drop('prev_out',axis=1).drop('edu',axis=1), # X\n",
-    "    bank_dummies.y,  # y\n",
-    "    test_size=0.2, # porcentaje que será prueba\n",
-    "    random_state=42) # para fijar el aleatorio (reproducibilidad)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-14T02:06:18.583126Z",
-     "start_time": "2019-02-14T02:06:18.565242Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grid_parametros = {\n",
-    "    'max_depth':[i for i in range (1,50)],\n",
-    "    'splitter': ['random'],\n",
-    "    'min_samples_split': [15, 20, 30],\n",
-    "}\n",
-    "\n",
-    "rf = DTR()\n",
-    "\n",
-    "\n",
-    "rf_cv = GridSearchCV(\n",
-    "    rf, \n",
-    "    grid_parametros,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-14T02:07:09.731748Z",
-     "start_time": "2019-02-14T02:06:18.731036Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=None, error_score='raise',\n",
-       "       estimator=DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
-       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "           min_impurity_split=None, min_samples_leaf=1,\n",
-       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "           presort=False, random_state=None, splitter='best'),\n",
-       "       fit_params=None, iid=True, n_jobs=1,\n",
-       "       param_grid={'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49], 'splitter': ['random'], 'min_samples_split': [15, 20, 30]},\n",
-       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
-       "       scoring=None, verbose=0)"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rf_cv.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-14T02:07:09.738030Z",
-     "start_time": "2019-02-14T02:07:09.733825Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'max_depth': 14, 'min_samples_split': 30, 'splitter': 'random'}"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rf_cv.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2649176564666906"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rf_cv.best_score_"
    ]
   },
   {
