--- a/Tarea 2.ipynb
+++ b/Tarea 2.ipynb
@@ -752,26 +752,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'cellular', 'telephone', 'unknown'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(bank.contact)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T01:06:54.203599Z",
@@ -966,7 +946,7 @@
        "4               0                 0                  0                1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T01:09:15.466980Z",
@@ -993,14 +973,21 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    bank_dummies.drop('y', axis=1).drop('prev_out',axis=1).drop('edu',axis=1), # X\n",
-    "    bank_dummies.y,  # y\n",
-    "    test_size=0.2, # porcentaje que será prueba\n",
-    "    random_state=42) # para fijar el aleatorio (reproducibilidad)"
+    "    bank_dummies.y,\n",
+    "    test_size=0.4, \n",
+    "    random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GridSearch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T02:06:18.583126Z",
@@ -1026,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T02:07:09.731748Z",
@@ -1049,7 +1036,7 @@
        "       scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-14T02:07:09.738030Z",
@@ -1074,7 +1061,7 @@
        "{'max_depth': 12, 'min_samples_split': 30, 'splitter': 'random'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,16 +1072,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.263627514700456"
+       "0.2642878406088291"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
